syntax = "proto3";

package dni;

message FeatureCounterTaskOptions { repeated string feature = 1; }
